...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                        <state key="normal" title="Show All TVs">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                        <state key="normal" title="See Top Rated TVs">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                        <state key="normal" title="Tom's Guide: 11 Things to Know">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
...
                                                                    <nil key="highlightedColor"/>
                                                                </label>
                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Free shipping" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mtT
                                                                    <rect key="frame" x="0.0" y="17.5" width="71.5" height="13.5"/>
                                                                    <fontDescription key="fontDescription" type="system" pointSize="11"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="All TVs" id="iBO-5p-ZrE">
                        <barButtonItem key="leftBarButtonItem" image="back" id="fqe-Qs-gFz">
                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                                        </constraints>
                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                                        <state key="normal" title="Add to Cart">
                                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                        </state>
...
